--- a/css/shop.css
+++ b/css/shop.css
@@ -1,26 +1,3 @@
-
-
 /* ==========================================================================
-   Author's custom styles
+   Author's custom styles for SHOP
    ========================================================================== */
-
-
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
