--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -25,12 +25,13 @@
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    right: 250px;
+    right: 200px;
     width: 0;
     height: 100%;
-    margin-right: -250px;
+    padding: 20px;
+    margin-right: -200px;
     overflow-y: auto;
-    background: #000;
+    background: #1d1d1d;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -38,7 +39,7 @@
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 200px;
 }
 
 #page-content-wrapper {
@@ -49,7 +50,7 @@
 
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
-    margin-right: -250px;
+    margin-right: -200px;
 }
 
 /* Sidebar Styles */
@@ -57,12 +58,12 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
-    margin: 0;
+    width: 150px;
+
+    margin: 50px 0 0 0;
     padding: 0;
     list-style: none;
 }
-
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
@@ -71,13 +72,17 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    font-size: 12px;
+    color: rgba(255,255,255,0.6);
+    display: block;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+    letter-spacing: 1px;
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+
 }
 
 .sidebar-nav li a:active,
@@ -102,7 +107,7 @@
 
 @media(min-width:768px) {
     #wrapper {
-        padding-right: 250px;
+        padding-right: 200px;
     }
 
     #wrapper.toggled {
@@ -110,16 +115,18 @@
     }
 
     #sidebar-wrapper {
-        width: 250px;
+        width: 200px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
         width: 0;
+        padding: 0;
     }
 
     #page-content-wrapper {
         padding: 20px;
         position: relative;
+        min-height: 75px;
     }
 
     #wrapper.toggled #page-content-wrapper {
