--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,14 @@
     width: 500px;
     height: 100px;
 }
+
 .container .box {
-    border: 1px black solid;
+
     position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .container .row h1 {
@@ -25,6 +30,7 @@
 
 .box.large img {
     width: 100%;
+    max-width: 100%;
     max-height: 405px;
 }
 
@@ -47,4 +53,18 @@
     font-weight: bold;
     width: 95%;
     text-transform: uppercase;
+}
+
+.box.small .blank_bg {
+    background-color: white;
+    height: 190px;
+}
+.box.small img{
+    width: 100%;
+    height: 200px;
+}
+
+.box.small .blank_bg .box_title {
+    margin: 0;
+
 }
