--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 #wrapper .logo {
     display: inline-block;
-    background: url(/asset/logocustom.png) center no-repeat;
+    background: url(http://placehold.it/500x100) center no-repeat;
     background-size: 500px 100px;
     width: 500px;
     height: 100px;
@@ -31,7 +31,7 @@
 .box.large_box img {
     width: 100%;
     max-width: 100%;
-    max-height: 405px;
+    max-height: 390px;
 }
 
 .box.large_box .box_title {
